@@ -1,3 +1,7 @@
+2011-02-21  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added file meta data fields to schema.xml
+
 2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
 	* Removed preset font family
